created services and razor

--- a/Pages/DDiscount.razor
+++ b/Pages/DDiscount.razor
@@ -1,5 +1,5 @@
-﻿@page "/ccustomer"
-@page "/ccustomer/{id:int}"
+﻿@page "/ddiscount"
+@page "/ddiscount/{id:int}"
 @using CardsCustomers.Models.Services;
 @using CardsCustomers.Models;
 @inject ICustomerService CustomerService
