--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -24,6 +24,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Customers
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="transactions">
+                <span class="oi oi-envelope-open" aria-hidden="true"></span> Transactions
+            </NavLink>
+        </div>
     </nav>
 </div>
 
