--- a/Pages/Customers.razor
+++ b/Pages/Customers.razor
@@ -22,7 +22,7 @@ else
     <table class="table">
         <thead>
             <tr>
-                <th>Edit</th>
+                <th></th>
                 <th>Name</th>
                 <th>Surname</th>
                 <th>BirthDate</th>
@@ -30,7 +30,7 @@ else
                 <th>Phone</th>
                 <th>Card</th>
                 <th>Points</th>
-                <th>Delete</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -45,11 +45,11 @@ else
                     <td>@customer.Phone</td>
                     <td>@customer.TimeStampIdCard</td>
                     <td>@customer.Points</td>
-                    <td class="text-right">
+                    @*<td class="text-right">*@
                      @*   <a class="btn btn-primary btn-sm" href="/players/detail/@item.Id" role="button">Details</a>
                         <a class="btn btn-secondary btn-sm" href="/players/edit/@item.Id" role="button">Edit</a>*@
                         @*<button class="btn btn-danger btn-sm" @onclick="@(e => DeleteCustomer(item.Id))" role="button">Delete</button>*@
-                    </td>
+                  @*  </td>*@
                     <td>
                         <button class="btn btn-sm btn-danger"
                         @onclick="@(() => DeleteCustomer(customer))">
