--- a/Pages/Transactions.razor
+++ b/Pages/Transactions.razor
@@ -22,7 +22,7 @@ else
     <table class="table">
         <thead>
             <tr>
-                <th>Edit</th>
+                <th></th>
                 <th>Name</th>
                 <th>Surname</th>
                 <th>Date</th>
@@ -30,28 +30,24 @@ else
                 <th>Purchase</th>
                 <th>Discount</th>
                 <th>Points</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var transaction in AllTransactions)
+            @foreach (@TransactionService.TransactionWithDetail transaction in AllTransactions)
             {
                 <tr>
-                    <td><a class="btn btn-sm btn-warning" href="/ttransaction/@transaction.IdTransaction">Edit</a></td>
-                    <td>@Convert.ToString(@transaction.Name)</td>
-                    <td>@Convert.ToString(@transaction.Surname)</td>
-                    <td>@transaction.InsertDate.ToShortDateString()</td>
-                    <td>@Convert.ToString(@transaction.TimeStampIdCard)</td>
-                    <td>@Convert.ToInt32(@transaction.Purchase)</td>
-                    <td>@Convert.ToInt32(@transaction.Discount)</td>
-                    <td>@Convert.ToInt32(@transaction.Points)</td>
-                    <td class="text-right">
-                     @*   <a class="btn btn-primary btn-sm" href="/players/detail/@item.Id" role="button">Details</a>
-                        <a class="btn btn-secondary btn-sm" href="/players/edit/@item.Id" role="button">Edit</a>*@
-                        @*<button class="btn btn-danger btn-sm" @onclick="@(e => DeleteCustomer(item.Id))" role="button">Delete</button>*@
-                    </td>
+                    <td><a class="btn btn-sm btn-warning" href="/ttransaction/@transaction.transaction.IdTransaction">Edit</a></td>
+                    <td>@Convert.ToString(@transaction.customer.Name)</td>
+                    <td>@Convert.ToString(@transaction.customer.Surname)</td>
+                    <td>@transaction.transaction.InsertDate.ToShortDateString()</td>
+                    <td>@Convert.ToString(@transaction.customer.TimeStampIdCard)</td>
+                    <td>@Convert.ToInt32(@transaction.transaction.Purchase)</td>
+                    <td>@Convert.ToInt32(@transaction.transaction.Discount)</td>
+                    <td>@Convert.ToInt32(@transaction.customer.Points)</td>
                     <td>
                         <button class="btn btn-sm btn-danger"
-                        @onclick="@(() => DeleteTransaction(transaction))">
+                        @onclick="@(() => DeleteTransaction(transaction.transaction))">
                             Delete
                         </button>
                     </td>
