--- a/Pages/CCurrency.razor
+++ b/Pages/CCurrency.razor
@@ -1,8 +1,8 @@
-﻿@page "/ddiscount"
-@page "/ddiscount/{id:int}"
+﻿@page "/ccurrency"
+@page "/ccurrency/{id:int}"
 @using CardsCustomers.Models.Services;
 @using CardsCustomers.Models;
-@inject IDiscountService DiscountService
+@inject ICurrencyService CurrencyService
 @inject NavigationManager NavigationManager
 
 <button type="submit" class="btn btn-outline-primary"
@@ -12,44 +12,27 @@
 <br/>
 @if (Id is null)
 {
-    <PageTitle >Create a new Discount </PageTitle>
-    <h3 class="text-center">Create a New Discount</h3>
+    <PageTitle >Create a new Currency </PageTitle>
+    <h3 class="text-center">Create a New Currency</h3>
 }
 else
 {
     <PageTitle>Edit  </PageTitle>
-    <h3 class="text-center">Edit @Discount.DiscountName</h3>
+    <h3 class="text-center">Edit @Currency.CurrencyName</h3>
 }
 
-<EditForm Model="Discount" OnSubmit="HandleSubmit">
+<EditForm Model="Currency" OnSubmit="HandleSubmit">
     <br />
     <div class="row mt-3">
         <label for="cardId" class="col-sm-2 col-form-label">
-            Discount Name
+            Currency Name
         </label>
         <div class="col-sm-4">
-            <InputText id="DiscountName" class="form-control"
-                       @bind-Value="Discount.DiscountName"  />
+            <InputText id="CurrencyName" class="form-control"
+                       @bind-Value="Currency.CurrencyName"  />
         </div>
     </div>
-    <div class="row mt-3">
-        <label for="points" class="col-sm-2 col-form-label">
-            Points Needed
-        </label>
-        <div class="col-sm-4">
-            <InputNumber id="PointsNeeded" class="form-control"
-                         @bind-Value="Discount.PointsNeeded"  />
-        </div>
-    </div>
-    <div class="row mt-3">
-        <label for="DiscountPercent" class="col-sm-2 col-form-label">
-            Discount Percent
-        </label>
-        <div class="col-sm-4">
-            <InputNumber id="DiscountPercent" class="form-control"
-                         @bind-Value="Discount.DiscountPercent"  />
-        </div>
-    </div>
+   
     <br />
     <button type="submit" class="btn btn-primary">@btnText</button>
 </EditForm>
@@ -60,10 +43,8 @@ else
     public int? Id { get; set; }
 
     string btnText = string.Empty;
-    [Inject]
-    DbCoreloginContext Context { get; set; }
-    Discount Discount = new Discount();
-    public IEnumerable<Discount> AllDiscounts { get; set; }
+    Currency Currency = new Currency();
+    public IEnumerable<Currency> AllCurrency { get; set; }
    
 
 
@@ -71,10 +52,10 @@ else
     {
         if (Id is not null)
         {
-            var result = DiscountService.GetDiscountById(Id);
+            var result = CurrencyService.GetCurrencyById(Id);
             if (result is not null)
             {
-                Discount = result;
+                Currency = result;
             }
             else
             {
@@ -84,7 +65,7 @@ else
     }
     protected override void OnInitialized()
     {
-        btnText = Id == null ? "Save new Discount" : "Update Discount";
+        btnText = Id == null ? "Save new Currency" : "Update Currency";
        
 
     }
@@ -96,11 +77,11 @@ else
     {
         if (Id is null)
         {
-            DiscountService.CreateDiscount(Discount);
+            CurrencyService.CreateCurrency(Currency);
         }
         else
         {
-            DiscountService.UpdateDiscount((int)Id, Discount);
+            CurrencyService.UpdateCurrency((int)Id, Currency);
         }
     }
     public void BackToDiscounts()
