--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -14,11 +14,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+   @*     <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
-        </div>
+        </div>*@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="customers">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Customers
@@ -28,6 +28,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="transactions">
                 <span class="oi oi-envelope-open" aria-hidden="true"></span> Transactions
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="discounts">
+                <span class="oi oi-plus" aria-hidden="true"></span> Discounts
             </NavLink>
         </div>
     </nav>
