fix for transaction

--- a/Pages/CCustomer.razor
+++ b/Pages/CCustomer.razor
@@ -55,7 +55,7 @@ else
 
     <div class="row mt-3">
         <label for="DateOfBirth" class="col-sm-2 col-form-label">
-            DateOfBirth
+            Birth Date
         </label>
         <div class="col-sm-4">
             <InputDate id="DateOfBirth" class="form-control"
