--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -35,6 +35,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Discounts
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="usersroles">
+                <span class="oi oi-pulse" aria-hidden="true"></span> Roles
+            </NavLink>
+        </div>
     </nav>
 </div>
 
